fix: Fixes overflow of the reorderable list (#31)
* refactor: Removes enable/disable buttons

* fix: Fixes reorderable list overflow

* style: Fixes formatting

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -94,3 +94,8 @@
   border-radius: 4px;
   white-space: pre-wrap;
 }
+
+.scrollable-table {
+  max-height: 55vh;
+  overflow-y: auto;
+}
